--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
-<h1>Vera Opoku</h1>
-<img src="https://i.pinimg.com/736x/7b/1b/ea/7b1bea114285f0af0db040f5a09e4e82.jpg" alt="">
-<h2>This is not my photo but happiness is key to life</h2>
-
-<ul>
-    <li>1998 The year I was born</li>
-    <li>2016- Graduated from Fairfield Senior High</li>
-    <li>2016- Went to Miami University Ohio for one semester</li>
-    <li>2017-Transferred to Wright State </li>
-   <li>2020- Graduated from Wright State University with my bachelor's in biology</li>
-   <li>2021- Weighed more cons than pros in going to med especially with this horrible American health care system</li>
-    <li>2022- Gradually falling in love with coding/programming because I am creating my very first fake website</li>  
-</ul>
-<a href="https://www.linkedin.com/in/vera-o-415055142/">See my linkedin Page</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body><h1>Vera Opoku</h1>
+    <img src="https://i.pinimg.com/736x/7b/1b/ea/7b1bea114285f0af0db040f5a09e4e82.jpg" alt="">
+    <h2>This is not my photo but happiness is key to life</h2>
+    
+    <ul>
+        <li>1998 The year I was born</li>
+        <li>2016- Graduated from Fairfield Senior High</li>
+        <li>2016- Went to Miami University Ohio for one semester</li>
+        <li>2017-Transferred to Wright State </li>
+       <li>2020- Graduated from Wright State University with my bachelor's in biology</li>
+       <li>2021- Weighed more cons than pros in going to med especially with this horrible American health care system</li>
+        <li>2022- Gradually falling in love with coding/programming because I am creating my very first fake website</li>  
+    </ul>
+    <a href="https://www.linkedin.com/in/vera-o-415055142/">See my linkedin Page</a>
 </body>
-</html> 
+</html>
